<resources>
    <string name="app_name">TechConn</string>
    <string name="imdiscor">Imdiscor</string>
    <string name="dimcorp">Dimcorp</string>
    <string name="user">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="mensajeLogin">Presione para recordar contraseña:</string>
    <string name="ingresar">INGRESAR</string>
    <string name="mensajeLog">Si olvido su contraseña, comunicarse directamente con la empresa
    para que pueda acceder al sistema.</string>
    <string name="ingrese_contrase_a">Contraseña</string>
    <string name="ingrese_el_usuario">Usuario</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_draw_open">Open</string>
    <string name="nav_draw_close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ordenes">Ordenes</string>
    <string name="nueva_orden">Nueva orden</string>
    <string name="clientes">Clientes</string>
    <string name="productos">Productos</string>
    <string name="status_de_pedido">Status de pedido</string>
    <string name="facturas">Facturas</string>
    <string name="mapas">Mapas</string>
    <string name="deudas_por_cobrar">Deudas por cobrar</string>
    <string name="opciones">Opciones</string>
    <string name="menu_de_opciones">Menu de opciones</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">eliminar</string>
    <string name="editar">editar</string>
    <string name="facturado">Facturado</string>
    <string name="estado">Estado:</string>
    <string name="foto_vendedor">Foto vendedor</string>
    <string name="buscar">Buscar</string>
    <string name="nro_orden">Nro Orden:</string>
    <string name="fecha">Fecha:</string>
    <string name="total">Total:</string>
    <string name="codigo">Codigo:</string>
    <string name="indice">Indice:</string>
    <string name="marca">Marca:</string>
    <string name="precio">Precio:</string>
    <string name="imagen">imagen</string>
    <string name="empaque">Empaque:</string>
    <string name="stock">Stock:</string>
    <string name="recordar">recordar</string>
    <string name="categoria">Categoria:</string>
    <string name="direccion">Direccion:</string>
    <string name="ruc">Ruc:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="cupo">Cupo:</string>
    <string name="deuda">Deuda:</string>
</resources>