<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.view.LoginImdisActivity">

    <ImageView
        android:id="@+id/loginImdiscor"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/imdiscor"
        android:src="@drawable/imdiscor_logo"
        app:layout_constraintBottom_toTopOf="@id/txt_login_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_login_usuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/ingrese_el_usuario"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/messageLog"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/txt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImdiscor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_login_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_contrase_a"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/messageLog"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/swi_imdis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_usuario" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swi_imdis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:contentDescription="@string/recordar"
        android:text="@string/mensajeLogin"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/txt_login_password"
        app:layout_constraintStart_toStartOf="@id/txt_login_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_password"
        app:thumbTint="@drawable/thump" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/ingresar"
        android:textColor="@color/iconImdiscor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/mensaje_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swi_imdis" />

    <TextView
        android:id="@+id/mensaje_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeLog"
        android:textAlignment="center"
        android:textColor="@color/messageLog"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>